[gd_scene load_steps=10 format=3 uid="uid://3wvvolcwvsk7"]

[ext_resource type="Theme" uid="uid://crlofspi6s6xu" path="res://interface/UI.tres" id="1_vwlqt"]
[ext_resource type="PackedScene" uid="uid://cwx57kfwdwcxq" path="res://interface/checkpoint/StatusMenu.tscn" id="3_fvxor"]
[ext_resource type="Script" path="res://interface/checkpoint/CheckpointMenu.gd" id="3_n4m28"]
[ext_resource type="PackedScene" uid="uid://ddpsnvvnfp82y" path="res://interface/checkpoint/TravelMenu.tscn" id="4_xklbk"]
[ext_resource type="Texture2D" uid="uid://crgdx5iqxvvjn" path="res://Assets/GUI/GUI_1x.png" id="5_cb7sj"]

[sub_resource type="Theme" id="Theme_d1i7a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4nnxg"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = ExtResource("5_cb7sj")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
region_rect = Rect2(96, 0, 24, 24)

[sub_resource type="Theme" id="Theme_kuhi0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u6uf2"]
texture = ExtResource("5_cb7sj")
texture_margin_left = 9.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0
region_rect = Rect2(32, 56, 32, 32)

[node name="Control" type="Control"]
z_index = 200
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 144.0
offset_bottom = 173.0
size_flags_horizontal = 0
theme = ExtResource("1_vwlqt")
script = ExtResource("3_n4m28")

[node name="StatusMenu" parent="." instance=ExtResource("3_fvxor")]
layout_mode = 1
offset_left = 162.0
offset_top = -73.0
offset_right = 389.0
offset_bottom = 173.0

[node name="TravelMenu" parent="." instance=ExtResource("4_xklbk")]
layout_mode = 1
offset_left = 162.0
offset_right = 312.0
offset_bottom = 173.0

[node name="Background" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_d1i7a")
theme_override_styles/panel = SubResource("StyleBoxTexture_4nnxg")

[node name="Border" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_kuhi0")
theme_override_styles/panel = SubResource("StyleBoxTexture_u6uf2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -65.5
offset_right = 30.5
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2

[node name="Rest" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rest"

[node name="Level" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Up"

[node name="Travel" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Travel"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Leave"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Rest" to="." method="_on_rest_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Level" to="." method="_on_level_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Travel" to="." method="_on_travel_pressed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
